# rolling-file-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: test.yaml
src/: lib.rs
